log/build_2026-05-16_01-13-26/aicar_vision/stderr.log
  File "/home/me/maedongyee_ws/install/aicar_vision/lib/python3.12/site-packages/aicar_vision/lane_detector_node.py", line 51
    ])
    ^
SyntaxError: unmatched ']'

